force pip to reinstall the plasnet_z package without using the cache

--- a/pling/envs/plasnet.yaml
+++ b/pling/envs/plasnet.yaml
@@ -6,4 +6,4 @@ dependencies:
   - python =3.9
   - pip
   - pip:
-    - git+https://github.com/Zhuo-DIAO/plasnet_z.git@main
+    - git+https://github.com/Zhuo-DIAO/plasnet_z.git@main --force-reinstall --no-cache-dir
